# SDFR_1

./: .gitignore  README.md  closed_loop_data.csv  follower_data.csv  sequence_data.csv
src/brightness_control/: CMakeLists.txt  README.md  package.xml
src/brightness_control/launch/: brightness_pipeline.launch.py
src/brightness_control/src/: brightness_control_node.cpp
src/cam2image_vm2ros/: CMakeLists.txt
src/cam2image_vm2ros/config/: cam2image.yaml
src/cam2image_vm2ros/include/: base64.hpp:Zone.Identifier
src/closed_loop_follower/: CMakeLists.txt  package.xml
src/closed_loop_follower/launch/: closed_loop_follower.launch.py
src/closed_loop_follower/src/: closed_loop_follower_node.cpp
src/object_follower/: CMakeLists.txt  Readme.md  package.xml
src/object_follower/launch/: object_follower.launch.py
src/object_follower/src/: object_follower_node.cpp
src/object_position/: CMakeLists.txt  README.md  package.xml
src/object_position/launch/: object_position.launch.py
src/object_position/src/: object_position_node.cpp
src/sequence_test/: CMakeLists.txt  README.md  package.xml
src/sequence_test/launch/: sequence_test.launch.py
src/sequence_test/src/: sequence_controller_node.cpp
