<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sequence_test</name>
  <version>0.1.0</version>
  <description>
    Sequence controller node for the RELbot.
    Publishes a hardcoded square trajectory as wheel velocity setpoints
    to the RELbot Adapter, which forwards them to the RELbot Simulator.
  </description>

  <maintainer email="you@example.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>example_interfaces</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>